--- a/src/app/pages/player/painel-esquerdo/painel-esquerdo.component.html
+++ b/src/app/pages/player/painel-esquerdo/painel-esquerdo.component.html
@@ -12,11 +12,19 @@
             <app-botao-menu (clickBotao)="botaoClick($event)" [descricao]="'Artistas'" [selecionado]="menuSelecionado =='Artistas'">
                 <fa-icon [icon]="artistaIcone"></fa-icon>
             </app-botao-menu>
-            <app-botao-menu (clickBotao)="botaoClick($event)" [descricao]="'playlist'" [selecionado]="false">
-                <fa-icon [icon]="playlistIcone"></fa-icon>
-            </app-botao-menu>
         </div>
+        <div class="menu-container flex">
+            <span class="playlist-titulo">
+                Playlist
+            </span>
+            <div class="playlist-scroll">
+                <app-botao-menu *ngFor="let playlist of playlists" (clickBotao)="botaoClick(playlist.id)" [descricao]="playlist.nome" [selecionado]="menuSelecionado ==playlist.id">
+                    <fa-icon [icon]="playlistIcone"></fa-icon>
+                </app-botao-menu>
+            </div>
+        </div>
+
     </div>
     <div class="usuario-info">
-    
+       <app-rodape-usuario></app-rodape-usuario>
     </div>
