--- a/src/app/pages/player/painel-esquerdo/painel-esquerdo.component.scss
+++ b/src/app/pages/player/painel-esquerdo/painel-esquerdo.component.scss
@@ -1,8 +1,10 @@
 @import "../../../../assets/styles/variaveis.scss";
 
 $h-spotify-logo: 120px;
-$h-menu-opçoes: 150px;
+$h-menu-opcoes: 150px;
 $m-entre-menus:10px;
+$h-footer-user: 70px;
+$h-desconsiderar: calc($h-spotify-logo + $h-menu-opcoes + $h-footer-user);
 :host {
   max-width: 300px;
   min-height: 100vh;
@@ -25,13 +27,46 @@ $m-entre-menus:10px;
 
     .menu-container {
       width: 100%;
+
+      &.flex{
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+      }
        &.opcoes {
-        min-height: $h-menu-opçoes;
+        min-height: $h-menu-opcoes;
         flex-direction: column;
         *{
             margin-bottom: $m-entre-menus;
         }
       }
+
+      .playlist-titulo{
+        margin: 10px 0px;
+        align-self: flex-start;
+        font-weight: bold;
+        font-size: .9rem;
+        color: $preto-transparent-30;
+      }
+
+      .playlist-scroll{
+        width: 100%;
+        max-height: calc(95vh - $h-desconsiderar);
+        overflow-y: auto;
+
+        &::-webkit-scrollbar{
+          display: none;
+        }
+      }
     }
+  }
+
+  .usuario-info{
+    flex-grow: 0;
+    display: block;
+    bottom: 0;
+    align-self: flex-end;
+    height: $h-footer-user;
+    width: 100%;
   }
 }
